--- a/Fitness2/app/src/main/AndroidManifest.xml
+++ b/Fitness2/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="comp90018.fitness">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +13,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Fitness">
+        <activity
+            android:name=".ui.moments.MomentDetailsActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.moments.AddMomentActivity"
+            android:exported="true"
+            android:label="Add Moment" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
